# MVA_usecase

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: auth.py  dependencies.py  error_handlers.py
app/core/: config.py  constants.py  enums.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  chart_specification.py  column_classification.py  column_profile.py  dataset_profile.py  drill_down_cube.py  hierarchy.py  profile_run.py  quality_assessment.py  readiness_assessment.py  rule_definition.py  rule_evaluation.py  rule_suggestion.py  secondary_domain_result.py
app/repositories/: configuration_repository.py  profile_run_repository.py  rule_repository.py
app/schemas/: common.py  requests.py  responses.py
config/: application.yaml  chart_policy.yaml  classification_weights.yaml  hierarchy_thresholds.yaml  quality_weights.yaml  readiness_weights.yaml
config/domains/: customer.yaml  finance.yaml  hr.yaml  payments.yaml
config/rules/: data_category_rules.yaml  llm_classification_config.yaml  semantic_role_rules.yaml  type_detection_rules.yaml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: conftest.py
tests/fixtures/: customer_crm_loyalty.csv  dirty_hierarchy_5pct.csv  expected_unique_duplicates.csv  finance_revenue_forecasting.csv  hr_employee_payroll.csv  invalid_hierarchy_40pct.csv  missing_mandatory_values.csv  payments_authorization.csv  payments_settlement_fraud.csv
tests/unit/: test_charts.py  (+20 more)
(+61 files in other folders)
