[project]
name = "mva-data-profiling-engine"
version = "0.1.0"
description = "Multi-Variance Analysis — Schema, Quality, Hierarchy, Readiness, and Chart Intelligence"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "chardet>=5.2.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "freezegun>=1.5.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --basetemp=tmp/pytest"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
